# RL_acome

./: .gitignore  LICENSE  README.rst  pyproject.toml
rl_acome/: utils.py
rl_acome/envs/: __init__.py  discrete.py  river_swim.py  utils.py  wrappers.py
rl_acome/envs/instances/: rooms.py
rl_acome/experiments/: __init__.py
rl_acome/learners/: QL_options.py  Q_learning.py  SUCRL.py  UCRL2.py  __init__.py  options.py  utils.py
tests/: test_dependencies.py  test_envs.py  test_learners.py  test_rl_acome.py
