[tool.poetry]
name = "RL_acome"
version = "0.1.0"
description = ""
authors = ["Javisty <aymec.78620@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
