[tool.poetry]
name = "RL_acome"
version = "0.1.0"
description = ""
authors = ["Javisty <aymec.78620@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
gym = "^0.23.1"
pytest = ">=6.2.5"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
