[tool.poetry]
name = "RL_acome"
version = "0.1.0"
description = ""
authors = ["Javisty <aymec.78620@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
gym = "^0.23.1"
pytest = ">=6.2.5"
scipy = "^1.8.0"
rlberry = {git = "https://github.com/rlberry-py/rlberry.git", rev = "v0.2.1"}
PyOpenGL = "^3.1.6"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
